# ligeia

./: .gitignore  .gitmodules  .kanban.csv  Cargo.toml
assets/shaders/: default.vert
ligeia-graphics/: Cargo.toml
ligeia-graphics/src/: basic_verts.rs  color.rs  directional_sprite.rs  framebuffer.rs  ground_sprite.rs  layered_sprite.rs  lib.rs  managed_camera.rs  primitive_type.rs  projection_matrix.rs  render_texture.rs  renderable.rs  shader.rs  shader_handler.rs  sprite.rs  texture.rs  texture_handler.rs  vector2.rs  vertex.rs  window.rs
ligeia-softcode/: Cargo.toml
ligeia-softcode/src/: file_loader.rs  lib.rs
ligeia-softcode/src/graphics/: layer_def.rs  mod.rs  texture_def.rs
ligeia-utils/: Cargo.toml
ligeia-utils/src/: file_error.rs  file_loader.rs  image_loader.rs  lib.rs  rect.rs  stopwatch.rs
src/: main.rs
src/components/: mod.rs  screen_position.rs  world_position.rs
src/game/: core.rs  mod.rs  resources.rs  scene.rs
src/graphics/: animation_def.rs  basic_verts.rs  directional_sprite.rs  ground_sprite.rs  layer_def.rs  layered_sprite.rs  managed_camera.rs  mod.rs  renderable.rs  shader_handler.rs  shadow.rs  sprite.rs  texture_def.rs  texture_handler.rs  vertex.rs  window.rs
src/input/: controller.rs  keyboard_controller.rs  mod.rs
src/physics/: body_def.rs  body_type.rs  collider_def.rs  consts.rs  mod.rs  physics_controller.rs  sensor_def.rs  spatial_conversion.rs  world.rs
src/scripting/: mod.rs  script_master.rs
src/util/: consts.rs  deconstruction.rs  fabrication.rs  float_rect.rs  math.rs  mod.rs  rect.rs
(+38 files in other folders)
