[package]
name = "ligeia"
version = "0.1.0"
authors = ["Alex Hoar <thealexhoar@gmail.com>"]

[dependencies]
bit-set = "0.4.0"
ligeia-softcode = { path = "ligeia-softcode" }
ligeia-utils = { path = "ligeia-utils" }

# TODO: remove liquidfun?
liquidfun = { path = "liquidfun-rust" }

ncollide2d = "0.15.2"
nphysics2d = "0.8"

serde = "1.0.37"
serde_json = "1.0.13"
sfml = { path = "rust-sfml"}
specs = "0.10.0"
specs-derive = "0.1.0"