[package]
name = "ligeia"
version = "0.1.0"
authors = ["Alex Hoar <thealexhoar@gmail.com>"]

[dependencies]
ligeia-graphics = { path = "ligeia-graphics" }
ligeia-softcode = { path = "ligeia-softcode" }
ligeia-utils = { path = "ligeia-utils" }
nalgebra = "0.14.2"
ncollide2d = "0.15.3"
nphysics2d = "0.8"
sdl2 = "0.31.0"
serde = "1.0.37"
serde_json = "1.0.13"
specs = "0.11.0"
specs-derive = "0.1.0"